# StupidHack2024

./: .gitignore  Dockerfile  README.md  ai_out.csv  deploy.sh  docker-compose.yml  pyproject.toml  words.ods
backend/: backend.py
helpers/: ai_out.csv  phrases.txt  wordparser.py  words.csv
myfirstaimodel/: __init__.py  backend.py  corrector.py  endpoints.py
myfirstaimodel/helpers/: wordparser.py
myfirstaimodel/templates/: index.html  scribula.js
