[tool.poetry]
name = "stupidhack2024"
version = "0.1.0"
description = "tyhäm hack"
authors = ["Testausserveri ry"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.3"
gunicorn = "^23.0.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pylint = "^3.2.6"
pytest = "^8.3.2"
coverage = "^7.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
